# fastapi-crud

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/api/: clock_in.py  items.py
app/schemas/: clock_in.py  item.py
app/services/: clock_in_service.py  item_service.py
