[tool.poetry]
name = "fastapi-crud-app"
version = "0.1.0"
description = "A FastAPI CRUD application for Items and User Clock-In Records"
authors = ["Purushothaman R"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
motor = "^2.5.1"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest"